styled sigup and login page

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,13 +1,25 @@
 // Colors
 $dark-grey: #333;
 $grey: #666;
-$blue: #1c88bf;
+$light-grey: rgb(204, 204, 204);
+$google-connect-button: rgb(66, 133, 244);
+$facebook-connect-button: #3b5998;
 $dark-blue: #364051;
 $off-white: #f7f7f7;
+$red: #C92228;
+
+// Heading Font size
+$font-size-heading-medium: 2.3rem;
+$font-size-heading-small: 2rem;
+
 // Font Size
 $font-size-large: 1.8rem;
+$font-size-medium: 1.6rem;
 $font-size-small: 1.4rem;
+$font-size-xsmall: 1.2rem;
+
 // Spacing
+$xs-size: .8rem;
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
