--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -1,9 +1,19 @@
 .text-input {
-  border: 1px solid #cacccd;
-  height: 50px;
+  border: 1px solid #b5b5b5;
+  height: 40px;
   font-size: $font-size-large;
   font-weight: 300;
   padding: $s-size;
+}
+
+.text-input__credential {
+  @extend .text-input;
+  border-radius: 3px;
+  margin: $m-size 0 0 0;
+  width: 100%;
+  &::placeholder {
+    color: darken($light-grey, 10%);
+  }
 }
 
 .select {
