--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -9,6 +9,7 @@ $off-white: #f7f7f7;
 $red: #C92228;
 
 // Heading Font size
+$font-size-heading-large: 3rem;
 $font-size-heading-medium: 2.3rem;
 $font-size-heading-small: 2rem;
 
