style recipe display card

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -4,9 +4,10 @@ $grey: #666;
 $light-grey: rgb(204, 204, 204);
 $google-connect-button: rgb(66, 133, 244);
 $facebook-connect-button: #3b5998;
-$dark-blue: #364051;
+$dark-blue: #00688B;
 $off-white: #f7f7f7;
 $red: #C92228;
+$green: #55AE3A;
 
 // Heading Font size
 $font-size-heading-large: 3rem;
