--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,4 +12,5 @@
 @import './components/list';
 @import './components/loader';
 @import './components/social-media';
+@import './components/card';
 
