style add and edit recipe page

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -7,6 +7,7 @@ $facebook-connect-button: #3b5998;
 $dark-blue: #00688B;
 $off-white: #f7f7f7;
 $red: #C92228;
+$error-red: #cc0000;
 $green: #55AE3A;
 
 // Heading Font size
