--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -70,7 +70,7 @@
 }
 
 .box-layout__error {
-  color: #cc0000;
+  color: $error-red;
   font-size: $font-size-xsmall;
   margin: 0;
   text-align: left;
