--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,4 +13,6 @@
 @import './components/loader';
 @import './components/social-media';
 @import './components/card';
-
+@import './components/icon';
+@import './components/ingredient';
+@import './components/method';
