--- a/src/styles/components/_content-container.scss
+++ b/src/styles/components/_content-container.scss
@@ -3,3 +3,11 @@
   padding: 0 $m-size;
   max-width: 100rem;
 }
+
+.content-flex-container {
+  margin: $l-size 0;
+  @media (min-width: $desktop-breakpoint) {
+    display: flex;
+    
+  } 
+}
