fixed function called when using Link

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -26,6 +26,10 @@
   padding: $m-size $l-size;
   position: relative;
   width: 90vw;
+
+  @media (min-width: $desktop-breakpoint) {
+    padding: $l-size $l-size;
+  }
 }
 
 .modal__title {
